<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/searchDoctors"
        android:icon="@drawable/ic_search_color"
        android:title="@string/search_label"
        app:showAsAction="always" />
</menu>